{
  "signUpTitle": "Sign up for {nameOfTheApp}",
    "@signUpTitle": {
      "description": "The title people seel when they open the app for the first time.",
      "placeholders": {
        "nameOfTheApp": {
          "type": "String",
          "example": "TikTok"
        }
      }
    },
  "signUpSubtitle": "Create a profile, follow other accounts, make your own {videoCount, plural, =0{no videos} =1 {video} other{videos}}, and more.",
  "loginTitle": "Log into your {nameOfTheApp} account",
    "@loginTitle": {
      "description": "The title people seel when they open the log in screen.",
      "placeholders": {
        "nameOfTheApp": {
          "type": "String",
          "example": "TikTok"
        }
      }
    },
  "emailPasswordButton": "Use email & password",
  "appleButton": "Continue with Apple",
  "alreadyHaveAnAccount": "Already have an account?",
  "login": "Log in",
  "likeCount": "{value}",
  "@likeCount": {
    "decoration": "Anything you want",
    "placeholders": {
      "value": {
        "type": "int",
        "format": "compact"
      }
    }
  },
  "commentCount": "{value}",
  "@commentCount": {
    "decoration": "Anything you want",
    "placeholders": {
      "value": {
        "type": "int",
        "format": "compact"
      }
    }
  },
  "commentTitle": "{value} {value2, plural, =1{comment} other{comments}}",
  "@commentTitle": {
    "decoration": "Anything you want",
    "placeholders": {
      "value": {
        "type": "int",
        "format": "compact"
      }
    }
  }
}
